--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -65,7 +65,7 @@
       <div class="error-text" *ngIf="invalid('correo')">Ingresa un correo válido.</div>
     </div>
 
-    <!-- Teléfono (opcional) -->
+    <!-- Teléfono (opcional) 
     <div class="form-group">
       <label class="form-label">Teléfono (opcional)</label>
       <div class="input-container">
@@ -74,6 +74,7 @@
                formControlName="telefono">
       </div>
     </div>
+    -->
 
     <!-- Passwords (grupo) -->
     <div formGroupName="passwordGroup">
