--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -62,6 +62,11 @@
         <span class="nav-text">Mi Perfil</span>
       </button>
       
+      <button class="nav-btn" (click)="navigateToSavedServices()">
+        <span class="nav-icon">💾</span>
+        <span class="nav-text">Lista de solicitudes</span>
+      </button>
+
       <button class="nav-btn" (click)="navigateToMyServices()">
         <span class="nav-icon">🔧</span>
         <span class="nav-text">Mis Servicios</span>
@@ -92,7 +97,7 @@
       
       <button class="nav-btn" (click)="navigateToSavedServices()">
         <span class="nav-icon">💾</span>
-        <span class="nav-text">Servicios Guardados</span>
+        <span class="nav-text">Lista de solicitudes</span>
       </button>
       
       <button class="nav-btn" (click)="navigateToNotifications()">
